<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ant.catch_up.Activity_Login"
    tools:showIn="@layout/activity__login">


    <TextView
        android:id="@+id/enteryourpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="259dp" />

    <EditText
        android:id="@+id/enteremail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="300dp" />

    <TextView
        android:id="@+id/enteryouremail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20dp"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="130dp" />

    <TextView
        android:id="@+id/AllShows"
        android:layout_width="326dp"
        android:layout_height="31dp"
        android:text="@string/catchphrase"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.652" />

    <TextView
        android:id="@+id/catchUP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/catchup"
        android:textSize="36sp"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="44dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="175dp" />


    <Button
        android:id="@+id/createNew"
        android:layout_width="247dp"
        android:layout_height="64dp"
        android:onClick="callRegisterPage"
        android:text="@string/newCreate"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="431dp" />

    <Button
        android:id="@+id/nextbutton"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:text="@string/Next"
        android:layout_marginStart="51dp"
        android:layout_marginLeft="51dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="368dp" />

</android.support.constraint.ConstraintLayout>
